--- a/index.html
+++ b/index.html
@@ -4,10 +4,62 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="icon" type="image/x-icon" href="./img/favicon.png">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@100;400;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/responsive.css">
 </head>
 <body>
+    <div class="container">
+        <header class="flex">
+            <div class="logo">
+                <div class="logo image4-3" style="background-image: url(./img/logo.png)"></div>
+            </div>
+            <div class="flex sub-menu">
+                <a href="#">home</a>
+                <a href="#">best camping</a>
+                <a href="#">booking</a>
+                <a href="#">about us</a>
+                <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
+            </div>
+        </header>
+        <main>
+            <div class="flex image16-9 booking" style="background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)),url(./img/background/river.jpg);">
+                <h1 class="c-white">Book your outdoor adventure</h1>
+                <p class="c-white">Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit </p>
+                <a href="#" class="c-white uppercase c-a79770">booking now</a>
+                <div class="info c-white flex">
+                    <div class="item c-a79770">
+                        <span>
+                            <img src="./img/icon/trekking.png" style="width: 50%;">
+                        </span>
+                        <h4 class="uppercase">trekking</h4>
+                    </div>
+                    <div class="item c-a79770">
+                        <span>
+                            <img src="./img/icon/camping.png" style="width: 50%;">
+                        </span>
+                        <h4 class="uppercase">camping</h4>
+                    </div>
+                    <div class="item c-a79770">
+                        <span>
+                            <img src="./img/icon/beachtent.png" style="width: 50%;">
+                        </span>
+                        <h4 class="uppercase">beach tents</h4>
+                    </div>
+                    <div class="item c-a79770">
+                        <span>
+                            <img src="./img/icon/news.png" style="width: 50%;">
+                        </span>
+                        <h4 class="uppercase">news & events</h4>
+                    </div>
+                </div>
+            </div>
+        </main>
+    </div>
     
     <script src="./js/main.js"></script>
 </body>
