--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
                 <a href="#">best camping</a>
                 <a href="#">booking</a>
                 <a href="#">about us</a>
-                <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
             </div>
+            <div class="hamburger"><i class="fa-solid fa-bars"></i></div>
         </header>
         <main>
             <div class="image16-9 booking" style="background-image: linear-gradient(0deg, rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(./img/background/river.jpg); position: relative;">
@@ -81,37 +81,37 @@
                 <div class="category grid">
                     <div class="item">
                         <div class="image" style="background-image: url(./img/background/best-camping.jpg);"></div>
-                        <div class="sub-content">
+                        <div class="sub-content flex">
                             <h4>Best RV camping</h4>
                         </div>
                     </div>
                     <div class="item">
-                        <div class="image" style="background-image: url(./img/background/lake-camping.jpg);"></div>
-                        <div class="sub-content">
+                        <div class="image" style="background-image:linear-gradient(0deg, rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(./img/background/lake-camping.jpg);"></div>
+                        <div class="sub-content flex">
                             <h4>Lake camping</h4>
                         </div>
                     </div>
                     <div class="item">
-                        <div class="image" style="background-image: url(./img/background/beach-stay.jpg);"></div>
-                        <div class="sub-content">
+                        <div class="image" style="background-image:linear-gradient(0deg, rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(./img/background/beach-stay.jpg);"></div>
+                        <div class="sub-content flex">
                             <h4>Beach stays</h4>
                         </div>
                     </div>
                     <div class="item">
-                        <div class="image" style="background-image: url(./img/background/backyard.jpg);"></div>
-                        <div class="sub-content">
+                        <div class="image" style="background-image:linear-gradient(0deg, rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(./img/background/backyard.jpg);"></div>
+                        <div class="sub-content flex">
                             <h4>Backyard Camping</h4>
                         </div>
                     </div>
                     <div class="item">
-                        <div class="image" style="background-image: url(./img/background/car-camping.jpg);"></div>
-                        <div class="sub-content">
+                        <div class="image" style="background-image:linear-gradient(0deg, rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(./img/background/car-camping.jpg);"></div>
+                        <div class="sub-content flex">
                             <h4>car camping</h4>
                         </div>
                     </div>
                     <div class="item">
-                        <div class="image" style="background-image: url(./img/background/wilderness.jpg);"></div>
-                        <div class="sub-content">
+                        <div class="image" style="background-image:linear-gradient(0deg, rgba(0,0,0,0.1), rgba(0,0,0,0.1)), url(./img/background/wilderness.jpg);"></div>
+                        <div class="sub-content flex">
                             <h4>Wilderness Camping</h4>
                         </div>
                     </div>
