--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                     <p>Email: campingseason@gmail.com</p>
                 </div>
                 <div class="form">
-                    <div class="sub-form flex">
+                    <div class="sub-form grid">
                         <div class="name">
                             <p>Name</p>
                             <input type="text" placeholder="Enter your name">
@@ -143,7 +143,7 @@
                         <p>Message</p>
                         <textarea rows="5" cols="63" placeholder="Enter your message"></textarea>
                     </div>
-                    <button class="btn">Submit</button>
+                    <button class="btn c-a79770">Submit</button>
                 </div>
             </div>
         </div>
